<resources>
    <string name="app_name">Tetris</string>

    <!--Game menu title-->
    <string name="game_menu_new_game">New Game</string>
    <string name="game_menu_records">Records</string>
    <string name="game_menu_exit">Exit</string>

    <!--Game activity elements-->
    <string name="game_activity_next_figure">Next Figure</string>
    <string name="game_activity_scores">Scores</string>
    <string name="game_activity_level">Level</string>
    <string name="game_activity_pause">Pause</string>
    <string name="game_activity_resume">Resume</string>
    <string name="game_message_gameOver">Game Over!</string>
    <string name="game_additional_message_new_record">Have a new record!</string>

    <!-- Records activity -->
    <string name="records_activity_id">#</string>
    <string name="records_activity_level">Level</string>
    <string name="records_activity_score">Score</string>
    <string name="records_activity_time">Time</string>
</resources>
