<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.tetris.dmitriy.tetris.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/ActivityMain_NewGameBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_menu_new_game"/>
        <Button
            android:id="@+id/ActivityMain_SettingsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_menu_settings"/>
        <Button
            android:id="@+id/ActivityMain_RecordsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_menu_records"/>
        <Button
            android:id="@+id/ActivityMain_ExitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_menu_exit"/>
    </LinearLayout>

</LinearLayout>
