<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <com.tetris.dmitriy.tetris.game.Glass
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_activity_next_figure"
                android:gravity="center"/>
            <ImageView
                android:id="@+id/ActivityGame_NextFigureImg"
                android:src="@mipmap/ic_launcher"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="@dimen/padding_default"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_default"
                android:gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/game_activity_scores"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/ActivityGame_ScoreTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/game_activity_level"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/ActivityGame_LevelTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <Button
           android:id="@+id/ActivityGame_LeftBtn"
           android:layout_weight="1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Left"/>
       <Button
           android:id="@+id/ActivityGame_RotateBtn"
           android:layout_weight="1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Rotate"/>
       <Button
           android:id="@+id/ActivityGame_FallDownBtn"
           android:layout_weight="1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Down"/>
       <Button
           android:id="@+id/ActivityGame_RightBtn"
           android:layout_weight="1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Right"/>
   </LinearLayout>
</LinearLayout>


